tests/specs/ecosystem/extism/extism/2_0_0_rc1.test
extism/extism/2.0.0-rc1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/call-context.ts:170:11
    | 
170 |     free: (addr: number) => {
    |           ^^^^^^^^^^^^^^^^^^^
    | 
171 |       this.#blocks[Block.addressToIndex(addr)] = null;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
172 |     },
    | ^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/call-context.ts:188:15
    | 
188 |     store_u8: (addr: bigint, n: number) => {
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
189 |       const blockIdx = Block.addressToIndex(addr);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
190 |       const offset = Block.maskAddress(addr);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
191 |       const block = this.#blocks[blockIdx];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
192 |       block?.view.setUint8(Number(offset), Number(n));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
193 |     },
    | ^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/call-context.ts:195:16
    | 
195 |     store_u64: (addr: bigint, n: bigint) => {
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
196 |       const blockIdx = Block.addressToIndex(addr);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
197 |       const offset = Block.maskAddress(addr);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
198 |       const block = this.#blocks[blockIdx];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
199 |       block?.view.setBigUint64(Number(offset), n, true);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
200 |     },
    | ^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/call-context.ts:221:17
    | 
221 |     output_set: (addr: bigint, length: bigint) => {
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
222 |       const blockIdx = Block.addressToIndex(addr);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
223 |       const block = this.#blocks[blockIdx];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
224 |       if (!block) {
    | ^^^^^^^^^^^^^^^^^^^
    | 
225 |         throw new Error(`cannot assign to this block (addr=${addr.toString(16).padStart(16, '0')}; length=${length})`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
226 |       }
    | ^^^^^^^
    | 
227 | 
    | 
    | 
228 |       if (length > block.buffer.byteLength) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
229 |         throw new Error('length longer than target block');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
230 |       }
    | ^^^^^^^
    | 
231 | 
    | 
    | 
232 |       this.#stack[this.#stack.length - 1][1] = blockIdx;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
233 |     },
    | ^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/call-context.ts:235:16
    | 
235 |     error_set: (addr: bigint) => {
    |                ^^^^^^^^^^^^^^^^^^^
    | 
236 |       const blockIdx = Block.addressToIndex(addr);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
237 |       const block = this.#blocks[blockIdx];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
238 |       if (!block) {
    | ^^^^^^^^^^^^^^^^^^^
    | 
239 |         throw new Error('cannot assign to this block');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
240 |       }
    | ^^^^^^^
    | 
241 | 
    | 
    | 
242 |       this.#stack[this.#stack.length - 1][2] = blockIdx;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
243 |     },
    | ^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


